# the-Librarian

./: .env.template  .gitattributes  .gitignore  AGENTS.md  API_IMPLEMENTATION_COMPLETE.md  API_QUICK_START.md  CLAUDE.md  EXECUTE-PARALLEL.bat  IMPLEMENTATION_COMPLETE.md  LAUNCH-ROUND1.bat  Librarian_Pattern_Implementation_Plan.md  PARALLEL-CLAUDE.ps1  PROCESSING_MODULE_COMPLETE.md  PR_DESCRIPTION.md  PR_DESCRIPTION_UPDATED.md  Project - Library Agent.md  Project_Brief_-_Librarian_Agent.md  README.md  REAL-IMPLEMENTATION-PROMPT.md  RUN-NOW.bat  RUN-NOW.sh  Research_Decisions.md  SIMPLE-PARALLEL.md  SPRINT_PLAN.md  Spec_Data_Model.md  Spec_Validation_and_Metrics.md  UV_SETUP.md  VALIDATION-ENGINE-COMPLETE.md  WEEK1_COMPLETION_REPORT.md  WEEK2_TEST_COMPLETION_REPORT.md  coordination.json  demo_processing.py  pyproject.toml  pytest.ini  requirements.txt  verify_processing.py
docs/: architecture.md  integration_architecture.md
docs/ADR/: 001-technology-stack-and-architecture-decisions.md  002-chunk-storage-strategy.md  README.md
docs/archive/: MasterDocumentationPlaybook.md  Project_Context.md  Project_Milestones.md  RAG PLANS 090 06 25.md  README.md  Spec_Agent_Orchestration.md  Spec_System_Architecture.md  Temporal Knowledge Graphs and Agentic Invalidation.md  neo4j_vs_falkordb_comparison.md
examples/: integration_example.py
prompts/: round1_agent1_graph.md  round1_agent2_processing.md  round1_agent3_validation.md  round2_review1_architecture.md  round2_review2_integration.md  round2_review3_quality.md  round3_fix1_tests_security.md  round3_fix2_adapters.md  round3_fix3_api.md
reviews/: architecture_compliance_review.md  integration_review.md  quality_review.md
src/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_api.py  test_audit_storage.py  test_graph.py  test_integration.py  test_metrics.py  test_middleware.py  test_processing.py  test_security.py  test_validation.py
(+56 files in other folders)
