[project]
name = "librarian"
version = "0.1.0"
description = "AI-powered knowledge graph and document processing system with RAG capabilities"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Patrick MacLyman", email = "pmaclyman@gmail.com" }
]
dependencies = [
    # Neo4j Driver
    "neo4j>=5.14.0",

    # Async Support
    "asyncio>=3.4.3",
    "nest-asyncio>=1.5.8",

    # Configuration Management
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",

    # Numerical Operations
    "numpy>=1.24.3,<2.0.0",

    # Document Processing
    "python-frontmatter>=1.0.0",
    "tiktoken>=0.5.1",

    # Embedding Generation
    "ollama>=0.1.6",

    # Logging
    "python-json-logger>=2.0.7",

    # FastAPI (for API layer)
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",

    # Type Checking
    "mypy>=1.7.1",

    # Code Quality
    "black>=23.11.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
